keycloak/keycloak-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  containers:
  - env:
    - name: KEYCLOAK_ADMIN
      value: admin
    - name: KEYCLOAK_ADMIN_PASSWORD
      value: admin
    - name: KC_DB
      value: postgres
    - name: KC_DB_URL
      value: jdbc:postgresql://postgres-service/keycloakdb
    - name: KC_DB_USERNAME
      value: admin
    - name: KC_DB_PASSWORD
      value: admin
    image: quay.io/keycloak/keycloak:25.0.4
    name: keycloak
    ports:
    - containerPort: 8080
    args: ["start-dev", "--hostname", "http://houseproject.internal/keycloak"]
  dnsPolicy: ClusterFirst
  restartPolicy: Always
